# video_object_detection

./: celery_app.py  flask_api.py  readme.txt
api/: pyproject.toml
application/: pyproject.toml
database/: mssql_script.sql
tests/: requests.postman_collection.json
video_object_detection/: celery_tasks.py  connections.py  frame_comparison.py  frame_search.py  pyproject.toml  s3_api.py  sql_alchemy_queries.py  video_capture.py
