[project]
name = "api-toml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.4.0",
    "aiohttp==3.10.5",
    "aiosignal==1.3.1",
    "alembic==1.13.2",
    "amqp==5.2.0",
    "attrs==24.2.0",
    "awscli==1.33.36",
    "banal==1.0.6",
    "billiard==4.2.1",
    "blinker==1.8.2",
    "boto3==1.34.154",
    "botocore==1.34.154",
    "celery==5.5.3",
    "certifi==2024.7.4",
    "cffi==1.17.1",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "crontab==1.0.1",
    "cryptography==43.0.1",
    "datasets==3.0.0",
    "deprecated==1.2.14",
    "dill==0.3.8",
    "dnspython==2.7.0",
    "docutils==0.16",
    "eventlet==0.40.1",
    "filelock==3.13.1",
    "flask==3.0.3",
    "flask-cors==5.0.0",
    "flask-rq2==18.3",
    "freezegun==1.5.1",
    "frozenlist==1.4.1",
    "fsspec==2024.2.0",
    "greenlet==3.0.3",
    "huggingface-hub==0.24.5",
    "idna==3.7",
    "iniconfig==2.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.3",
    "jmespath==1.0.1",
    "kombu==5.5.4",
    "mako==1.3.5",
    "markupsafe==2.1.5",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "networkx==3.2.1",
    "numpy==1.26.3",
    "opencv-python==4.10.0.84",
    "packaging==24.1",
    "pandas==2.2.2",
    "pillow==10.2.0",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.47",
    "pyarrow==17.0.0",
    "pyasn1==0.6.0",
    "pycparser==2.22",
    "pycurl==7.45.3",
    "pygithub==2.4.0",
    "pygments==2.19.2",
    "pyjwt==2.9.0",
    "pynacl==1.5.0",
    "pyodbc==5.1.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyyaml==6.0.1",
    "redis==5.0.8",
    "regex==2024.7.24",
    "requests==2.32.3",
    "rq==1.16.2",
    "rq-scheduler==0.13.1",
    "rsa==4.7.2",
    "s3transfer==0.10.2",
    "safetensors==0.4.3",
    "scipy==1.14.0",
    "six==1.16.0",
    "sqlalchemy==2.0.35",
    "sympy==1.12",
    "tokenizers==0.19.1",
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "tqdm==4.66.5",
    "transformers==4.43.3",
    "typing-extensions==4.9.0",
    "tzdata==2025.2",
    "urllib3==2.2.2",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "werkzeug==3.0.3",
    "wrapt==1.16.0",
    "xxhash==3.5.0",
    "yarl==1.11.1",
]
